# qim-data

./: .gitignore  README.md  go.mod  pyproject.toml  strategy.md
cmd/qim-data/: main.go
cmd/qim-mux/: main.go
docs/: CLI-wrapper.md  WIP.md  development-notes-go.md  magic-wormhole-qimrelay.md  qim-data-cli.md  qim-magic-wormhole-strategy.md  qimserver-magic-wormhole-setup.md  qimserver-relay-runbook.md  release-procedure.md  server-mux-strategy.md
internal/config/: config.go
internal/croc/: croc.go
internal/installer/: croc_installer.go
internal/tunnel/: tunnel.go
scripts/: build-releases.sh
src/qim_data/: __init__.py  app.py  cli.py  config.py  constants.py
src/qim_data/backends/: __init__.py  base.py  wormhole_cli.py
tests/: test_cli.py
